[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["Nico Tomeo <nicotomeo5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
greenlet = "^1.1.3"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
pre-commit = "^2.20.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
